--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,30 @@
 img {
-    max-width: 100%;
-    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
   }
 
 body {
     display: block;
     margin: 8px;
+}
+
+p {
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+h1 {
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+h2 {
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 #mainHeading {
